[gd_scene load_steps=3 format=3 uid="uid://bm8hg8jvdgnfp"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_8s7ee"]
[ext_resource type="Script" path="res://camera.gd" id="2_okxdc"]

[node name="Level" type="Node3D"]
script = ExtResource("1_8s7ee")

[node name="CameraRoot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="PositionTarget" type="Node3D" parent="CameraRoot"]
top_level = true

[node name="RotationTarget" type="Node3D" parent="CameraRoot"]
top_level = true

[node name="Pivot" type="Node3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 0.898794, 0.438371, 0, -0.438371, 0.898794, 0, 0, 0)

[node name="Camera" type="Camera3D" parent="CameraRoot/Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11)
v_offset = 0.5
current = true
fov = 40.0
size = 10.0
script = ExtResource("2_okxdc")
